--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ import Footer from "~/components/Footer.astro";
 import GoogleAnalytics from "~/components/GoogleAnalytics.astro";
 
 // Fallback for site and pathname to prevent "Invalid URL" error
-const site = Astro.site ?? "https://ezviz-dubai.com";
+const site =  "https://ezviz-dubai.com";
 const pathname = Astro.url?.pathname ?? "/";
 const canonicalURL = new URL(pathname, site);
 
